Paragraph padding on About page and syntax fix on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -272,6 +272,7 @@ a.title{
     font-size: 18px;
     margin-left: 10vw;
     margin-right: 10vw;
+    padding-top: 2.5vh;
     padding-bottom: 2.5vh;
     text-align: center;
      display: flex;
